--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
-* {
+* { 
+  padding: 0;
+  box-sizing: border-box;
   margin: 0;
 }
 
 html,
 body {
+  --grey: hsl(240, 9%, 89%);
+  --black: hsl(240, 6%, 13%);
+
   height: 100%;
   font-family: 'roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
-  --grey: hsl(240, 9%, 89%);
-  --black: hsl(240, 6%, 13%);
 }
 
 body {
@@ -17,9 +20,10 @@ body {
 }
 
 main {
-  background: url(images/background.png);
-  width: 375px;
-  height: 812px;
+  background: url(images/background.png) no-repeat center/cover;
+  width: 100%;
+  /* min-height: 812px; */
+  height: 100%;
 }
 
 .container {
@@ -54,6 +58,7 @@ main {
 
 h1 {
   font-size: 1.5rem;
+
   margin-top: 1.5rem;
 }
 
@@ -64,7 +69,7 @@ a {
   margin-top: 0.25rem;
 
   display: flex;
-  gap: 12px;
+  gap: 0.75rem;
 
   justify-content: center;
   align-items: center;
